--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 					<div class="feature">
 						<img src="pin.jpg" alt="pin" />
-						<p>An pin Feature</p>
+						<p>An pin Feature !!!</p>
 					</div>
 
 					<div class="feature">
